# django-violations

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  requirements.txt  setup.cfg  tox.ini
apps/: urls.py
apps/threads/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/violations/: __init__.py  admin.py  apps.py  forms.py
apps/violations/behaviours/: rule.py
apps/violations/forms/: violation.py
apps/violations/models/: __init__.py  rule.py  violation.py
apps/violations/viewmixins/: violation.py
apps/violations/views/: violation.py
django_violation/: asgi.py  settings.py  urls.py
django_violation_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/apps/threads/: read_thread.html  report_thread.html
violation/: __init__.py  admin.py  apps.py  signals.py
violation/behaviours/: __init__.py  rule.py  violation.py
violation/fields/: __init__.py  rule.py
violation/forms/: violation.py
violation/managers/: rule.py  violation.py
violation/migrations/: 0001_initial.py  0002_alter_rule_id_alter_violation_id.py
violation/models/: __init__.py  rule.py  violation.py
violation/views/: violation.py
violations/: admin.py  apps.py  signals.py
violations/behaviours/: rule.py
violations/fields/: rule.py
violations/forms/: violation.py
violations/models/: rule.py  violation.py
violations/viewmixins/: violation.py
violations/views/: violation.py
