[metadata]
name = django-violation
version = attr: violation.__version__
description = django-violation is a reusable Django application for reporting illicit/improper acts.
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Oluwaseun
author_email = adepeter26@gmail.com
url = https://github.com/adepeter/django-violations
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/adepeter/django-violations
    Tracker = https://github.com/adepeter/django-violations/issues

[options]
python_requires = >=3.7
packages = find:
install_requires = Django>=3.1
include_package_data = true
zip_safe = false

[options.packages.find]
exclude = tests*

[flake8]
# E501: line too long
ignore = E501

[isort]
combine_as_imports = True
forced_separate = violation
include_trailing_comma = True
line_length = 88
multi_line_output = 3
